apps/base/vector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vector
  labels:
    # Injects Vault server CA with Trust Manager to verify Vault when scraping metrics
    vault-server-ca-inject: "true"
