apps/base/vector/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vector
  annotations:
    reloader.stakater.com/auto: "true"
    reloader.stakater.com/rollout-strategy: "restart"
spec:
  template:
    spec:
      serviceAccountName: vector
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 1000
        fsGroup: 0 # required to read /var/log/pods
        seccompProfile:
          type: RuntimeDefault
      updateStrategy:
        type: RollingUpdate
        rollingUpdate:
          maxUnavailable: 0
          maxSurge: 1
      containers:
        - name: vector
          image: timberio/vector:latest-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8222
          volumeMounts:
            - name: vector-config
              mountPath: /etc/vector/
              readOnly: true

            - name: vault-issuer-ca
              mountPath: /etc/ssl/certs/vault-issuer/
              readOnly: true
            - name: vault-server-ca
              mountPath: /etc/ssl/certs/vault-server/
              readOnly: true

            - name: var-lib
              mountPath: /var/lib/vector

            - name: k8s-pod-logs
              mountPath: /var/log/pods
              readOnly: true

            - name: host-proc
              mountPath: /mnt/host/proc
              readOnly: true
            - name: host-sys
              mountPath: /mnt/host/sys
              readOnly: true
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: vector-config
          configMap:
            name: vector-config

        - name: vault-issuer-ca
          configMap:
            name: vault-issuer-ca
        - name: vault-server-ca
          secret:
            secretName: vault-server-ca

        - name: var-lib
          emptyDir: {}

        - name: k8s-pod-logs
          hostPath:
            path: /var/log/pods
            type: Directory

        - name: host-proc
          hostPath:
            path: /proc
            type: Directory
        - name: host-sys
          hostPath:
            path: /sys
            type: Directory
