apps/base/vector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector
spec:
  type: ClusterIP
  ports:
    - name: forwarding
      protocol: TCP
      port: 50051
    - name: statsd
      protocol: UDP
      port: 8125
