apps/base/vector/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vector
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow Vault to send StatsD metrics
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: vault
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault
      ports:
        - port: 9000
          protocol: UDP
  egress:
    # Allow writing data to InfluxDB
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: influxdb2  
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: influxdb
      ports:
        - port: 8086
          protocol: TCP
    # Allow DNS resolution
    - ports:
        - port: 53
          protocol: UDP
